Update WordFence settings

--- a/.htaccess
+++ b/.htaccess
@@ -22,6 +22,9 @@ RewriteRule . /seanmccartney/index.php [L]
 <IfModule mod_php7.c>
 	php_value auto_prepend_file 'C:\xampp\htdocs\seanmccartney/wordfence-waf.php'
 </IfModule>
+<IfModule mod_php.c>
+	php_value auto_prepend_file 'C:\xampp\htdocs\seanmccartney/wordfence-waf.php'
+</IfModule>
 <Files ".user.ini">
 <IfModule mod_authz_core.c>
 	Require all denied
@@ -33,3 +36,4 @@ RewriteRule . /seanmccartney/index.php [L]
 </Files>
 
 # END Wordfence WAF
+
